prevent nav from going off screen

--- a/lametro/static/css/city_custom.css
+++ b/lametro/static/css/city_custom.css
@@ -353,6 +353,11 @@ hr .events-line {
       padding: 4px 8px;
       margin-bottom: 10px;
     }
+
+    .container-fluid-nav{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .badge-highlight {
